поправил вопросы из ревью